sql/item_func.cc
@@ -134,6 +134,27 @@ Item_func::Item_func(List<Item> &list)
   set_arguments(list);
 }
 
+Item_func::Item_func(THD *thd, Item_func &item)
+  :Item_result_field(thd, item),
+   allowed_arg_cols(item.allowed_arg_cols),
+   arg_count(item.arg_count),
+   used_tables_cache(item.used_tables_cache),
+   not_null_tables_cache(item.not_null_tables_cache),
+   const_item_cache(item.const_item_cache)
+{
+  if (arg_count)
+  {
+    if (arg_count <=2)
+      args= tmp_arg;
+    else
+    {
+      if (!(args=(Item**) thd->alloc(sizeof(Item*)*arg_count)))
+	return;
+    }
+    memcpy((char*) args, (char*) item.args, sizeof(Item*)*arg_count);
+  }
+}
+
 
 /*
   Resolve references to table column for a function and it's argument
